// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fails to parse if length property is missing or is not an integer 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "path": [],
    "received": "null",
  },
]
`;

exports[`fails to parse if length property is missing or is not an integer 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "path": [],
    "received": "object",
  },
]
`;

exports[`fails to parse if length property is missing or is not an integer 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "path": [],
    "received": "object",
  },
]
`;

exports[`fails to parse if the length is above the maximum length 1`] = `
[
  {
    "code": "too_long",
    "length": 3,
    "maxLength": 2,
    "minLength": undefined,
    "path": [],
  },
]
`;

exports[`fails to parse if the length is below the minimum length 1`] = `
[
  {
    "code": "too_short",
    "length": 1,
    "maxLength": undefined,
    "minLength": 2,
    "path": [],
  },
]
`;
